# gol-cpp

./: CMakeLists.txt  LICENSE  README.md  main copy.cpp  main.cpp
lib/: Cell.cpp  Cell.h
